--- a/implementacao/regescweb/src/main/resources/application.properties
+++ b/implementacao/regescweb/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/regescweb
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://190.115.197.249/projeto3
+spring.datasource.username=usuario
+spring.datasource.password=password
+
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
