[FEATURE] Adicionar tela do professor, professor poder dar saldo aos alunos de acordo com o ID, professor ver as transações

--- a/implementacao/regescweb/src/main/resources/application.properties
+++ b/implementacao/regescweb/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.hikari.maxLifeTime=600000
 spring.datasource.connectionProperties: useSSl=false;allowPublicKeyRetrieval=true
+
+server.port = 8082
