--- a/implementacao/regescweb/src/main/resources/application.properties
+++ b/implementacao/regescweb/src/main/resources/application.properties
@@ -7,5 +7,15 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.hikari.maxLifeTime=600000
 spring.datasource.connectionProperties: useSSl=false;allowPublicKeyRetrieval=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pucminas849@gmail.com
+spring.mail.password=livh fgkj sydz usyy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Configurações do remetente padrão
+spring.mail.properties.mail.smtp.from=pucminas849@gmail.com
+
 
 server.port = 8080
